# datasette-llm-embed

./: README.md  datasette_llm_embed.py  pyproject.toml
tests/: conftest.py  test_llm_embed.py
